Use lein-ancient 0.5.5 and don't print GC.