@@ -16,6 +16,6 @@
   :java-source-paths ["src"]
   :target-path "target/%s"
   :plugins [[codox "0.6.7"]
-            [lein-ancient "0.5.4"]]
+            [lein-ancient "0.5.5"]]
   :profiles {:uberjar {:aot :all}}
-  :jvm-opts ["-Xms4M" "-Xmx1G" "-XX:+PrintGC"])
+  :jvm-opts ["-Xms4M" "-Xmx1G" "-XX:-PrintGC"])
